<resources>
    <string name="app_name">PubHunter</string>
    <string name="poloha">poloha</string>
    <string name="piva">pivo</string>
    <string name="pocet_stolu">počet stolů</string>
    <string name="popis">popis</string>
    <string name="cena_piva">cena piva</string>
    <string name="potvrdit">potvrdit</string>
    <string name="odeslat">odeslat</string>
    <string name="search">Search</string>
    <string name="u_3_opic">U 3 opic</string>
    <string name="mystika">Mystika</string>
    <string name="content_description_media" />
    <string name="zadejte_pj">Zadejte přihlašovací jméno:</string>
    <string name="zadejte_ph">Zadejte přihlašovací heslo:</string>
    <string name="ztracene_h">Zapomněl jsem heslo</string>
    <string name="zaregistrovat">Zaregistrovat se</string>
    <string name="neni_ucet">Jestliže nemáte účet, můžete se zaregistrovat.</string>
    <string name="prihlasit">Přihlásit se</string>
    <string name="odhlasit">Odhlásit se</string>
    <string name="add_hospoda_profil">Přidat moji hospodu</string>
    <string name="spravovat_hospoda_profil">Spravovat mojí hospodu</string>
    <string name="oblibene_hospoda_profil">Moje oblíbené hospody</string>
    <string name="zmenit_udaje_profil">Změnit údaje o účtě</string>
    <string name="zmenit_email">Změnit e-mail</string>
    <string name="zmenit_email_e">Zadejte nový e-mail:</string>
    <string name="zmenit_heslo">Změnit heslo</string>
    <string name="zmenit_heslo_h">Zadejte nové heslo:</string>
    <string name="zmenit_picture_profil">Změnit profilový obrázek</string>
    <string name="zmenit_foto_profil">Změnit foto</string>
    <string name="nahrat_foto_profil">Nahrát foto</string>
    <string name="datum">12.12.2022</string>
    <string name="odebrat_pivo">odebrat \n pivo</string>
    <string name="zadejte_e">Zadejte váš e-mail:</string>
    <string name="zadejte_ph2">Zadejte znovu přihlášovací heslo:</string>
    <string name="zp_t_na_vyhled_v_n">Zpět na vyhledávání</string>
    <string name="pridat_aktualitu">Přidat aktualitu</string>
    <string name="spravovat_cisniky">spravovat číšníky</string>
    <string name="zadejte_aktualitu">Zadejte aktualitu:</string>
    <string name="zpet">Zpět</string>
    <string name="odeslat_aktualitu">Odeslat aktualitu</string>
    <string name="cisnik_jmeno">Přihlašovací jméno číšníka</string>
    <string name="cisnik_heslo">Heslo číšníka</string>
    <string name="nazev">Název</string>
    <string name="odebrat_cisnika">Odebrat</string>
    <string name="dostupnost_pivo">Dostupnost \n Ano</string>
    <string name="dostupnost_pivo_ne">Dostupnost \n Ne</string>
</resources>