<?xml version="1.0" encoding="utf-8"?>
<!--@author Vít Janeček, xjanec30-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/color_style"
        app:menu="@menu/menu_with_home_profil" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">

            <LinearLayout
                android:id="@+id/input_zaregistrovat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wood_texture_dark"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/nav">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_odhlasit_profil"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/wood_texture_light"
                    android:radius="15dp"
                    android:text="@string/odhlasit"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add_hospoda_profil"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/wood_texture_light"
                    android:radius="15dp"
                    android:text="@string/add_hospoda_profil"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_spravovat_hospoda_profil"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/wood_texture_light"
                    android:radius="15dp"
                    android:text="@string/spravovat_hospoda_profil"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_oblibene_hospoda_profil"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/wood_texture_light"
                    android:radius="15dp"
                    android:text="@string/oblibene_hospoda_profil"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null">
                </com.google.android.material.button.MaterialButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/zmenit_udaje_profil"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_zmenit_email_profil"
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/wood_texture_light"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/zmenit_email"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zadejte_ph"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layout_zmenit_email_heslo_profil"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginVertical="20dp"
                            android:background="@color/cardview_light_background"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_zmenit_email_heslo_profil"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginHorizontal="5dp"
                                android:layout_marginVertical="5dp"
                                android:background="@color/cardview_light_background"
                                android:textSize="20sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zmenit_email_e"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layout_zmenit_email_email_profil"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginVertical="20dp"
                            android:background="@color/cardview_light_background"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_zmenit_email_email_profil"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginHorizontal="5dp"
                                android:layout_marginVertical="5dp"
                                android:background="@color/cardview_light_background"
                                android:textSize="20sp"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/button_zmenit_email_profil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/marble_texture"
                            android:text="@string/zmenit_email"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:backgroundTint="@null" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_zmenit_heslo_profil"
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/wood_texture_light"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/zmenit_heslo"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zadejte_ph"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layout_zmenit_heslo_heslo1_profil"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginVertical="20dp"
                            android:background="@color/cardview_light_background"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_zmenit_heslo_heslo1_profil"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginHorizontal="5dp"
                                android:layout_marginVertical="5dp"
                                android:background="@color/cardview_light_background"
                                android:textSize="20sp"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zmenit_heslo_h"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layout_zmenit_heslo_heslo2_profil"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginVertical="20dp"
                            android:background="@color/cardview_light_background"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_zmenit_heslo_heslo2_profil"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginHorizontal="5dp"
                                android:layout_marginVertical="5dp"
                                android:background="@color/cardview_light_background"
                                android:textSize="20sp"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/button_zmenit_heslo_profil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/marble_texture"
                            android:text="@string/zmenit_heslo"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:backgroundTint="@null" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>