<?xml version="1.0" encoding="utf-8"?>
<!--@author Radek Šerejch, xserej00-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAktualitaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="56sp"
            android:background="@drawable/color_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_with_home_profil"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:orientation="vertical"
            android:background="@drawable/wood_texture_dark">

            <com.google.android.material.card.MaterialCardView

                android:id="@+id/card_prihlasovaci_jmeno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/wood_texture_light">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="15dp">
                        <TextView
                            android:id="@+id/add_aktualita_hospoda_jmeno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="nameholder"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            />
                        <TextView
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/zadejte_aktualitu"/>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layout_add_aktualita"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            app:layout_constraintTop_toBottomOf="@+id/nav">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_add_aktualita"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <Button
                            android:id="@+id/button_send_actuality"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/odeslat_aktualitu"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>




        </RelativeLayout>
        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:background="@drawable/color_style"
            app:backgroundTint="@null"
            android:textColor="@color/black"
            android:text="@string/zpet"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>